--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <header class="navbar">
     <div class="logo-container">
-            <img src="images/oo.png" alt="Logo" class="logo"> <!-- Replace logo.png with your logo file -->
+            <img src="oo.png" alt="Logo" class="logo"> <!-- Replace logo.png with your logo file -->
         </div>
     <ul class="nav-links">
       <li><a href="#about">About</a></li>
@@ -32,14 +32,14 @@
     <div class="hero-content">
       <h1>Hello, I'm <span>R Anisha</span></h1>
       <p>Creative Developer | Designer | AI Enthusiast</p>
-      <a href="images/11.pdf" class="btn">View Resume </a>
+      <a href="11.pdf" class="btn">View Resume </a>
     </div>
   </section>
 
  <section id="about">
   <h2>About Me</h2>
   <div class="about-container">
-    <img src="images/pp.jpg" alt="R Anisha" class="about-photo" />
+    <img src="pp.jpg" alt="R Anisha" class="about-photo" />
     <p>I love designing clean, colorful, and accessible web experiences.<br> 
     Passionate about creativity, code, and continuous learning.</p>
   </div>
