--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <header class="navbar">
     <div class="logo-container">
-            <img src="oo.jpg" alt="Logo" class="logo"> <!-- Replace logo.png with your logo file -->
+            <img src="oo.jpg.png" alt="Logo" class="logo"> <!-- Replace logo.png with your logo file -->
         </div>
     <ul class="nav-links">
       <li><a href="#about">About</a></li>
