--- a/index.html
+++ b/index.html
@@ -50,14 +50,27 @@
     <h2>Projects</h2>
     <div class="project-grid">
       <div class="project-card">
-        <h3>Smart Scheduler</h3>
-        <p>Web app that intelligently schedules daily tasks with user preference.</p>
-        <a href="#">View Project</a>
+        <h3>AUTOMATED FIRE EXTINGUISHER</h3>
+        <p>This system detects and snuffs out fire using integrated sensors
+without human involvement and helps in bringing down
+atmospheric temperature.</p>
       </div>
       <div class="project-card">
-        <h3>Portfolio Generator</h3>
-        <p>Create animated portfolios with a single click – React + Tailwind.</p>
-        <a href="#">GitHub</a>
+        <h3>Land Acquisition Mangement
+</h3>
+        <p>Coordinated and executed land acquisition strategies, including site identification, negotiation with landowners acres for development projects.</p>
+      </div>
+    </div>
+  </section>
+   <section id="certicates">
+    <h2>Certificates</h2>
+    <div class="project-grid">
+      <div class="project-card">
+        <h3>NPTEL</h3>
+      </div>
+      <div class="project-card">
+        <h3>Python
+</h3>
       </div>
     </div>
   </section>
